[package]
name = "mr_kdtree_address"
version = "0.1.1"
edition = "2024"
description = "KD-tree reverse geocoding for Thailand subdistrict addresses (tambon/amphoe/province)"
license = "MIT"
keywords = ["thailand", "geocoding", "kd-tree", "address", "geolocation"]
categories = ["algorithms", "data-structures"]
repository = "https://github.com/supaatwi/mr_kdtree_address"
readme = "README.md"

[dependencies]
kdtree = "0.6"
csv = "1"
